@@ -1,3 +1,5 @@
+2004-03-19 Mariusz Woloszyn
+	* library.c: added Konica-Minolta DiMAGE A2
 2004-03-01 Mariusz Woloszyn
 	* library.c: better capture code
 2004-02-13 Mariusz Woloszyn
